--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -51,7 +51,7 @@ securityContext: {}
 
 probes:
   livenessProbe:
-    enabled: true
+    enabled: false
   readinessProbe:
     enabled: true
   startupProbe:
@@ -118,7 +118,7 @@ db:
     resources:
       limits:
         cpu: 2000m
-        memory: 2000Mi
+        memory: 2Gi
       requests:
         cpu: 500m
         memory: 500Mi
