helm chart autoscaling off by default

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -92,7 +92,7 @@ resources:
     memory: 500Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 2
   maxReplicas: 6
   targetCPUUtilizationPercentage: 80
