--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,6 +60,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+        args: ["--max-line-length=88"]
 
   # Lint: Markdown
   - repo: https://github.com/igorshubovych/markdownlint-cli
