[#181650999] add nginx reverse proxy for ckan - prettier modified python script formatting, testing...

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ POSTGRES_VERSION=14
 POSTGIS_VERSION=3.2
 SOLR_VERSION=8.11.1
 REDIS_VERSION=6.2
+NGINX_VERSION=1.21
 MAINTAINER=sam.woodcock@protonmail.com
 INTERNAL_REG=registry.envidat.ch/envidat
 EXTERNAL_REG=docker.io
