--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,30 @@ services:
       - db
       - solr
       - redis
-    ports:
-      - "8989:5000"
     env_file:
       - .env
     volumes:
       - ckan_storage:/opt/ckan/data
       - ./ckan.ini:/home/ckan/ckan.ini
+    networks:
+      - ckan-internal
+
+  proxy:
+    container_name: ckan_proxy
+    image: "${INTERNAL_REG}/ckan-proxy:${NGINX_VERSION}-main"
+    build:
+      context: ./nginx
+      args:
+        - EXTERNAL_REG=${EXTERNAL_REG}
+        - INTERNAL_REG=${INTERNAL_REG}
+        - NGINX_VERSION=${NGINX_VERSION}
+        - MAINTAINER=${MAINTAINER}
+    depends_on:
+      - ckan
+    ports:
+      - "8989:80"
+    volumes:
+      - ckan_storage:/opt/ckan/data
     networks:
       - ckan-internal
 
