--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     depends_on:
       - ckan
     environment:
-      - CKAN_HOST=http://ckan:5000
+      - CKAN_HOST=ckan:5000
     ports:
       - "8989:80"
     volumes:
