--- a/nginx/templates/ckan.template
+++ b/nginx/templates/ckan.template
@@ -14,7 +14,7 @@ server {
     add_header 'Access-Control-Allow-Credentials' 'true';
 
     location / {
-        proxy_pass ${CKAN_HOST};
+        proxy_pass http://${CKAN_HOST};
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;
         proxy_cache cache;
