--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,6 +10,10 @@ FROM ${EXTERNAL_REG}/nginx:${NGINX_VERSION}-alpine
 COPY --from=certs \
     /etc/ssl/certs/ca-certificates.crt \
     /etc/ssl/certs/ca-certificates.crt
+ARG NGINX_VERSION
+ARG MAINTAINER
+LABEL envidat.ch.nginx-img-tag="${NGINX_VERSION}" \
+      envidat.ch.maintainer="${MAINTAINER}"
 ENV SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
 WORKDIR /etc/nginx
 # Remove default Nginx static assets
