--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,7 @@ http {
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
+    server_tokens off;
     types_hash_max_size 2048;
 
     keepalive_timeout  65;
@@ -32,7 +33,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     map $host $upgrade_policy {
-        "localhost:8989" 'upgrade-insecure-requests';
-        default '';
+        "localhost:8989" '';
+        default 'upgrade-insecure-requests';
     }
 }
