--- a/nginx/templates/ckan.template
+++ b/nginx/templates/ckan.template
@@ -3,20 +3,28 @@ proxy_temp_path /tmp/nginx_proxy 1 2;
 
 server {
 
+    listen 80 default_server;
+    server_name _;
+
     client_max_body_size 10G;
 
     # below redirect breaks localhost access
-    #rewrite ^/(.*)/$ /$1 permanent;
+    # rewrite ^/(.*)/$ /$1 permanent;
 
-    # Upgrade all urls to https to prevent mixed content warnings
-    # Set via map in nginx.conf
-    add_header 'Content-Security-Policy' $upgrade_policy;   
+    add_header 'Content-Security-Policy' $upgrade_policy;
     add_header 'Access-Control-Allow-Credentials' 'true';
 
     location / {
         proxy_pass http://${CKAN_HOST};
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header Host $host;
+
+        proxy_set_header Host                $http_host;
+        proxy_set_header X-Real-IP           $remote_addr;
+        proxy_set_header X-Forwarded-Proto   $scheme;
+        proxy_set_header X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host    $http_host;
+        proxy_set_header X-Forwarded-Server  $http_host;
+        proxy_set_header X-Forwarded-Port    $server_port;
+
         proxy_cache cache;
         proxy_max_temp_file_size 0;
         proxy_cache_bypass $cookie_auth_tkt;
@@ -28,7 +36,7 @@ server {
         proxy_busy_buffers_size 1024k;
         proxy_cookie_flags ~ secure samesite=lax;
         # In emergency comment out line to force caching
-        # proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
+        #proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
     }
 
 }
