--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,8 @@
 user  nginx;
 worker_processes  auto;
 
+load_module /usr/lib/nginx/modules/ngx_http_redis_module.so;
+
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
 
