--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -29,5 +29,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "chart.proxySelectorLabels" . | nindent 4 }}
+    {{- include "chart.selectorLabels" . | nindent 4 }}
 {{ end }}
