Squashed commit of the following:
commit 30ccf0ba4b835537a6ab3e104843a655db3e5232
Author: sam <sam.woodcock@protonmail.com>
Date:   Wed Apr 6 10:55:05 2022 +0100

    fix chart svc selectors for proxy

commit 5b4fd2e161f8dfb2eb1b69ffac773a68c3d6f34f
Author: sam <sam.woodcock@protonmail.com>
Date:   Wed Apr 6 10:15:26 2022 +0100

    use redis for nginx cache, update chart and dev

commit c46992956be2f2e188965b32c6308983003a00d2
Author: sam <sam.woodcock@protonmail.com>
Date:   Wed Apr 6 09:36:16 2022 +0100

    nginx revert to filesystem cache, update config

commit b7368a84abd83a6cda44175e0ee273af61cff140
Author: sam <sam.woodcock@protonmail.com>
Date:   Wed Apr 6 09:23:44 2022 +0100

    build nginx proxy with redis cache module

commit c58c89fdea931a41e6f4e0ff4c5d1822b56b9824
Author: sam <sam.woodcock@protonmail.com>
Date:   Tue Apr 5 14:24:14 2022 +0100

    rename nginx ckan conf template to make work...
    - required .conf extension to be picked up by nginx.conf

commit dbdbff7bc97db9f35b91ad28968ab930247a7ae2
Author: sam <sam.woodcock@protonmail.com>
Date:   Tue Apr 5 14:23:25 2022 +0100

    update nginx conf, rename chart vars, img labels

commit 866e96c088be204fc76c0909949568392d63abf5
Author: sam <sam.woodcock@protonmail.com>
Date:   Mon Apr 4 12:58:54 2022 +0100

    add nginx sidecar to helm chart & update CI

commit 1747cb91341b48be6f9845710d83c4b184749b3f
Author: sam <sam.woodcock@protonmail.com>
Date:   Thu Mar 31 16:42:52 2022 +0100

    [#181650999] remove http from nginx env var inject

commit e255156c80ef1b0dc1d01c45cb96d1de62c1e5ae
Author: sam <sam.woodcock@protonmail.com>
Date:   Thu Mar 31 16:37:03 2022 +0100

    [#181650999] nginx use template + env, remove ci

commit 247f55d817f4d260e2ff8a4b1a866fcc26b77d16
Author: sam <sam.woodcock@protonmail.com>
Date:   Thu Mar 31 16:18:36 2022 +0100

    [#181650999] add nginx reverse proxy for ckan
    - prettier modified python script formatting, testing...

commit 6eab3478ee884fa0a535b5b7c127acc77ac

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,11 @@ set-vars:
     - source build.env
     - echo "NAMESPACE=ckan" >> build.env
     - echo "APP_NAME=ckan-${CI_COMMIT_REF_NAME}" >> build.env
-    - echo CHART_VERSION=$(yq '.version' chart/Chart.yaml) >> build.env    
+    - echo CHART_VERSION=$(yq '.version' chart/Chart.yaml) >> build.env
     - "echo CKAN_IMAGE=${INTERNAL_REG}/ckan:\
       ${CKAN_VERSION}-${CI_COMMIT_REF_NAME} >> build.env"
+    - "echo PROXY_IMAGE=${INTERNAL_REG}/ckan-proxy:\
+      ${NGINX_VERSION}-${CI_COMMIT_REF_NAME} >> build.env"
     - "echo DB_IMAGE=${INTERNAL_REG}/ckan-db:\
       ${POSTGRES_VERSION}-${POSTGIS_VERSION}-${CI_COMMIT_REF_NAME} >> build.env"
     - "echo SOLR_IMAGE=${INTERNAL_REG}/ckan-solr:\
@@ -65,11 +67,13 @@ set-vars:
       --destination "${IMAGE_NAME}-unverified"
       --build-arg MAINTAINER="${MAINTAINER}"
       --build-arg EXTERNAL_REG="${EXTERNAL_REG}"
+      --build-arg INTERNAL_REG="${INTERNAL_REG}"
       --build-arg PYTHON_VERSION="${PYTHON_VERSION}"
       --build-arg CKAN_VERSION="${CKAN_VERSION}"
       --build-arg POSTGRES_VERSION="${POSTGRES_VERSION}"
       --build-arg POSTGIS_VERSION="${POSTGIS_VERSION}"
       --build-arg SOLR_VERSION="${SOLR_VERSION}"
+      --build-arg NGINX_VERSION="${NGINX_VERSION}"
 
 ckan-build:
   extends:
@@ -77,6 +81,18 @@ ckan-build:
   variables:
     IMAGE_NAME: ${CKAN_IMAGE}
     CONTEXT_DIR: "${CI_PROJECT_DIR}"
+
+proxy-build:
+  extends:
+    - .build
+  cache:
+    key: nginx-config
+    paths:
+      - nginx/conf.d/ckan.conf
+    policy: pull
+  variables:
+    IMAGE_NAME: ${PROXY_IMAGE}
+    CONTEXT_DIR: "${CI_PROJECT_DIR}/nginx"
 
 db-build:
   extends:
@@ -145,6 +161,13 @@ ckan-scan:
     IMAGE_NAME: ${CKAN_IMAGE}
     SHORT_NAME: "ckan"
 
+proxy-scan:
+  extends:
+    - .scan
+  variables:
+    IMAGE_NAME: ${PROXY_IMAGE}
+    SHORT_NAME: "proxy"
+
 db-scan:
   extends:
     - .scan
@@ -192,6 +215,12 @@ ckan-retag:
   variables:
     IMAGE_NAME: ${CKAN_IMAGE}
 
+proxy-retag:
+  extends:
+    - .retag
+  variables:
+    IMAGE_NAME: ${PROXY_IMAGE}
+
 db-retag:
   extends:
     - .retag
@@ -224,7 +253,6 @@ solr-init-retag:
       echo "{\"auths\":{\"${INTERNAL_REG}\":{\"auth\":\"$(printf "%s:%s"
       "${IMAGE_REGISTRY_USER}" "${IMAGE_REGISTRY_PASS}" | base64
       | tr -d '\n')\"}}}" > /root/.config/helm/registry/config.json
-    - export HELM_APP_VERSION="${VERSION}-${CI_COMMIT_REF_NAME}"
 
 create-helm-chart:
   extends:
@@ -238,7 +266,7 @@ create-helm-chart:
       apk add yq --no-cache
       --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
     - helm dependencies build chart
-    - yq -i '.appVersion = strenv(HELM_APP_VERSION)' chart/Chart.yaml
+    - yq -i '.appVersion = strenv(CKAN_VERSION)' chart/Chart.yaml
     - helm package chart
     - CHART_VER=$(yq '.version' chart/Chart.yaml)
     - helm push "ckan-${CHART_VER}.tgz" oci://registry.envidat.ch/envidat
@@ -253,10 +281,12 @@ helm-deploy:
     GIT_STRATEGY: none
   script:
     - >
-      helm upgrade --install --create-namespace "${APP_NAME}"
+      helm upgrade --install "${APP_NAME}"
       oci://registry.envidat.ch/envidat/ckan
-      --namespace "${NAMESPACE}"
+      --namespace "${NAMESPACE}" --create-namespace
       --version "${CHART_VERSION}"
+      --set image.tag="${CKAN_VERSION}-${CI_COMMIT_REF_NAME}"
+      --set proxy.image.tag="${NGINX_VERSION}-${CI_COMMIT_REF_NAME}"
       --set image.pullPolicy="Always"
       --set configIniSecret="${APP_NAME}-config-ini"
       --set extraEnvFrom[0].secretRef.name="solr-${APP_NAME}-vars"
@@ -268,6 +298,7 @@ helm-deploy:
       --set db.auth.existingSecret="db-${APP_NAME}-creds"
       --set db.primary.resources.requests.cpu="100m"
       --set db.primary.resources.requests.memory="100Mi"
+      --set db.syncData.restoreDbSecret="db-${APP_NAME}-vars"
       --set solr.ingress.hostname="solr-${CI_COMMIT_REF_NAME}.envidat.ch"
       --set solr.passwordInit.credentialsSecret="solr-${APP_NAME}-vars"
       --set solr.passwordInit.pullPolicy="Always"
@@ -287,3 +318,5 @@ helm-deploy-prod:
       oci://registry.envidat.ch/envidat/ckan
       --namespace "${NAMESPACE}" --create-namespace
       --version "${CHART_VERSION}"
+      --set image.tag="${CKAN_VERSION}-${CI_COMMIT_REF_NAME}"
+      --set proxy.image.tag="${NGINX_VERSION}-${CI_COMMIT_REF_NAME}"
