--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,8 @@ repos:
     rev: v2.5.0
     hooks:
       - id: prettier
+        args:
+          ["--ignore-unknown", "--no-error-on-unmatched-pattern", "!chart/**"]
 
   # Lint: Dockerfile
   - repo: https://github.com/hadolint/hadolint.git
@@ -32,7 +34,11 @@ repos:
     rev: v1.26.3
     hooks:
       - id: yamllint
-        args: ["-d {extends: relaxed, rules: {line-length: disable}}", "-s"]
+        args:
+          [
+            "-d {extends: relaxed, rules: {line-length: disable}, ignore: chart}",
+            "-s",
+          ]
         files: \.(yaml|yml)$
 
   # Lint: Bash scripts
@@ -54,6 +60,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+        args: ["--max-line-length=88"]
 
   # Lint: Markdown
   - repo: https://github.com/igorshubovych/markdownlint-cli
