--- a/chart/templates/job-solr.yaml
+++ b/chart/templates/job-solr.yaml
@@ -16,5 +16,7 @@ spec:
         envFrom:
         - secretRef:
             name: {{ .Values.solr.passwordInit.credentialsSecret }}
-      restartPolicy: OnFailure
-    {{- end }}
+      restartPolicy: Never
+      activeDeadlineSeconds: 180
+  backoffLimit: 1
+{{- end }}
