--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ workflow:
   rules:
     - if: $CI_COMMIT_REF_NAME == "main"
       when: always
+    - if: $CI_COMMIT_REF_NAME == "staging"
+      when: always
     - if: $CI_COMMIT_REF_NAME == "dev"
       when: always
     - if: '$CI_PIPELINE_SOURCE == "web"'
