use kaniko v1.8.1 debug image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ set-vars:
 .build:
   stage: build
   image:
-    name: gcr.io/kaniko-project/executor:debug
+    name: gcr.io/kaniko-project/executor:v1.8.1-debug
     entrypoint: [""]
   before_script:
     - >
